@startuml
'https://plantuml.com/class-diagram

class Netflix{
main
}
class User{
- username
- password
- age
+ ArrayList<Media> watchedMovie
+ ArrayList<Media> savedMovie
+ void watchedMovie()
+ void savedMovie()
 }

abstract class Media{
-String titel
-double rating
-int releaseDate
 +ArrayList Categories
 +Media(Titel, releaseDate, Categories, Rating)
 + void play()
 +getName()
 +getRating()
 +getRealseYear()
 +getCategory()
 +equals()

}
class Film{
+Film(titel, releaseDate, Categories, rating)
}
class Series {
+ ArrayList<int>
-int season
-int episode
+Series(titel, releaseDate, Categories, Rating, season, episode)
}
class Season extends Series{
-int seasonNumber;
-private ArrayList<String> episodes
+season(int seasonNumber)
-getSeasonNumber()
+addEpisodes(String episodeTitle)
+toString()
}

class Episode{
-int episodeNumber
getepisodeNumber()

}
package "util"{
class TextUI{
-static ArrayList<User> users
-static User currentUser = null;
-Scanner sacn
+ void String displayMsg(String s)
+void startMenu()
-static void CreatUser()
-static void loginUser()
}
class FileIO{
FileReader()
+List<String> readUserData(String path)
+void saveData(List<User> users,String path)
+String[] readBoardData(String path, int length)
    }
}

Netflix *-- User
Netflix *-- Media
Media <|-- Film
Media <|-- Series
Series <|-- Season
Season <|-- Episode
Netflix *-- FileIO
Netflix *-- TextUI
@enduml